--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eduversum-howto (0.1.1) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 04 Apr 2009 01:12:48 +0200
+
 eduversum-howto (0.1.0) unstable; urgency=low
 
   * Initial Release.
