--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-eduversum-howto (0.1.1) UNRELEASED; urgency=low
+eduversum-howto (0.1.1) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * switch to dpkg-source 3.0 (native) format.
+  * bump standards version to 3.8.4, no changes necessary.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 04 Apr 2009 01:12:48 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 25 Apr 2010 23:54:49 +0200
 
 eduversum-howto (0.1.0) unstable; urgency=low
 
