--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eduversum-howto (0.1.2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 25 Apr 2010 23:56:22 +0200
+
 eduversum-howto (0.1.1) unstable; urgency=low
 
   * switch to dpkg-source 3.0 (native) format.
