--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-eduversum-howto (0.1.2) UNRELEASED; urgency=low
+eduversum-howto (0.1.2) ORPHANED; urgency=low
 
   * NOT RELEASED YET
+  * ORPHAN PACKAGE in favour of the new binary package inside of eduversum.
+  * bump standards version to 3.9.1, no changes necessary.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 25 Apr 2010 23:56:22 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 03 Aug 2010 18:05:21 +0200
 
 eduversum-howto (0.1.1) unstable; urgency=low
 
